[package]
name = "ace_it"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
keywords = ["proc_macro"]
repository = "https://github.com/VlaDexa/ace_it"
description = "Macro to automate wrapping types into enums"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = {version = "1.0", features = ["full"]}
quote = "1.0"